force-app/main/default/objects/IHNL_Association__c/IHNL_Association__c.object-meta.xml
<CustomObject>
    <label>IHNL Association</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>IHNL Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IHNL Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>