force-app/main/default/objects/IHNL_Association__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <formula>Issue_Hierarchy__r.Cause__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cause</label>
    <type>Text</type>
</CustomField>