force-app/main/default/objects/IHNL_Association__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <formula>Issue_Hierarchy__r.Classification__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification</label>
    <type>Text</type>
</CustomField>