force-app/main/default/objects/IHNL_Association__c/fields/Issue_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Issue_Hierarchy__c</fullName>
    <label>Issue Hierarchy</label>
    <referenceTo>Issue_Hierarchy__c</referenceTo>
    <relationshipLabel>IHNL Associations</relationshipLabel>
    <relationshipName>IHNL_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>