force-app/main/default/objects/IHNL_Association__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <formula>Issue_Hierarchy__r.Issue_Type__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Type</label>
    <type>Text</type>
</CustomField>