force-app/main/default/objects/IHNL_Association__c/fields/Natural_Language__c.field-meta.xml
<CustomField>
    <fullName>Natural_Language__c</fullName>
    <label>Natural Language</label>
    <referenceTo>Natural_Language__c</referenceTo>
    <relationshipLabel>IHNL Associations</relationshipLabel>
    <relationshipName>IHNL_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>