force-app/main/default/objects/IHNL_Association__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <formula>Issue_Hierarchy__r.Reason__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason</label>
    <type>Text</type>
</CustomField>